# fred

./: .gitmodules  CMakeLists.txt  LICENSE.md  README.md  TODO.md  engine.cpp  shader.c  shader.h
.github/workflows/: compile.yml
models/: suzanne.mtl
shaders/: basic.frag  basic.vert  basic_lit.frag  basic_lit.vert  shader.vert
src/: engine.cpp  shader.c
textures/: fred.cprj
textures/results/: suzanne_albedo_DXT1.DDS  suzanne_albedo_DXT3.DDS  suzanne_albedo_DXT5.DDS  suzanne_specular_DXT1.DDS  suzanne_specular_DXT3.DDS  suzanne_specular_DXT5.DDS  teapot_DXT1.DDS  teapot_DXT3.DDS  teapot_DXT5.DDS  texture_BMP_DXT1_1.DDS  texture_BMP_DXT3_2.DDS  texture_BMP_DXT5_3.DDS
